# flux-a2a-prototype

./: .gitignore  CHARTER.md  DOCKSIDE-EXAM.md  README.md  a2a.py  pyproject.toml
docs/: isa-mapping-analysis.md  round1-3_a2a_language_design.md  round1-3_nl_compilation_theory.md  round1-3_opcode_convergence.md  round1-3_paradigm_research.md  round10-12_meta_compilation.md  round10-12_type_unification.md  round4-6_paradigm_simulations.md  round4-6_synthesis_and_next.md  worklog_R1-R3.md  worklog_r1r3.txt
for-fleet/: health-check-2026-04-12_171641.json
message-in-a-bottle/for-fleet/Quill/: MESSAGE.md
src/flux_a2a/: __init__.py  consensus.py  discussion.py  paradigm_lattice.py
tests/: test_optimizer.py  test_wen_lat_bridge.py  test_zho_deu_bridge.py
