[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flux-a2a"
version = "0.1.0"
description = "Agent-to-Agent first-class JSON language for the FLUX multilingual ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "FLUX Fleet", email = "a2a@flux.eco" },
]
keywords = [
    "a2a",
    "agent-to-agent",
    "flux",
    "multilingual",
    "json-language",
    "bytecode",
    "co-iteration",
    "branching",
    "forking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.optional-dependencies]
dev = [
    "pytest >=7.0",
    "pytest-asyncio >=0.21",
    "ruff >=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flux_a2a"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
